# S.H.E.

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENCE.md  LICENCE.txt  LICENSE.txt  README.md  SHE-ActionList.md  SHE_README.md  SheConfig.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: eu_email_dept3.jsonl  interactions.jsonl
docs/: FMT-SR-manual.md  README.md  manual.md
docs/api/: overview.md
docs/archive/: CORE-manual.md  README.md  she.toml
docs/archive/stanleyreisner/: stanley_reisner.py
docs/internal/: Ahson-LLM_ReadMe.md
docs/internal/archive/: SHE_code_audit.md
docs/tutorials/: getting_started.md  social_diffusers.md
docs/usecases/: social_media_diffusers.md
examples/: SHEDemo.py  eu_email_analysis.ipynb  group_diffusion_demo.py  social_group_lift.py  social_media_diffusers.py  toy_triangle.py
examples/experimental/: SHEDemo.py  SHE_Comprehensive_Demo.ipynb
notebooks/: demo_evolution.ipynb  sheshowcase.ipynb  temporal_diffusion_analysis.ipynb
she/: __init__.py
src/: dashboard.py  evolution.py  ingestion.py  model.py
src/core/: SHE.py  SHESimplicialConvolution.py  SHESimplicialConvolutionalNetwork  __init__.py
src/core/complex/: SHESimplicialComplex.py
src/core/config/: SheConfig.py
src/core/diffusion/: SHEHodgeDiffusion.py
src/core/engine/: SHEEngine.py
src/core/io/: SHEDataLoader.py
src/core/visualize/: SHEDiffusionVisualizer.py
src/morse/: __init__.py  morse.py  morsescalability.py
src/she/: __init__.py  complex.py  config.py  diffusion.py  engine.py  export.py  hyperstructure.py  io.py  social.py  temporal.py  types.py  visualize.py
src/stanleyreisner/: stanley-reisner.py
src/visualize/: SHEDiffusionVisualizer.py
tests/: test_decay_window.py  test_diffusion_smoke.py  test_export.py  test_hyperstructure.py  test_imports.py  test_ingestion.py  test_social_analysis.py  test_temporal.py  test_toy_complex.py
